RESOLVED FIXED118921
[BlackBerry] Fix WebGL to a 2D canvas copies
https://bugs.webkit.org/show_bug.cgi?id=118921
Summary [BlackBerry] Fix WebGL to a 2D canvas copies
Jakob Petsovits
Reported 2013-07-19 14:42:00 PDT
The transform in BlackBerry's implementation of GraphicsContext3D::paintToCanvas() was converted incorrectly when it replaced the pixel copy that was there before. As a true draw transformation, it doesn't need the "- 1" modification that pixel copies often require. This makes tests in webgl/conformance/canvas fail, which is bad. Patch below.
Attachments
Patch (2.13 KB, patch)
2013-07-19 14:48 PDT, Jakob Petsovits
no flags
Jakob Petsovits
Comment 1 2013-07-19 14:48:31 PDT
WebKit Commit Bot
Comment 2 2013-07-22 11:05:45 PDT
Comment on attachment 207148 [details] Patch Clearing flags on attachment: 207148 Committed r152980: <http://trac.webkit.org/changeset/152980>
WebKit Commit Bot
Comment 3 2013-07-22 11:05:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.