[BlackBerry] Fix WebGL to a 2D canvas copies. https://bugs.webkit.org/show_bug.cgi?id=118921 https://jira.bbqnx.net/browse/BRWSR-12714 JIRA 449577

Patch by Jakob Petsovits <jpetsovits@blackberry.com> on 2013-07-22
Reviewed by George Staikos.

The transform here was converted incorrectly when it
replaced the pixel copy that was there before.
As a true draw transformation, it doesn't need the "- 1"
modification that pixel copies often require.

Fixes existing webgl/conformance/canvas tests.

* platform/graphics/blackberry/GraphicsContext3DBlackBerry.cpp:
(WebCore::GraphicsContext3D::paintToCanvas):

Canonical link: https://commits.webkit.org/136811@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152980 268f45cc-cd09-0410-ab3c-d52691b4dbfc